fixing z-index on nav bar shadow

--- a/src/components/Viewer/Viewer.module.css
+++ b/src/components/Viewer/Viewer.module.css
@@ -62,6 +62,8 @@
 .LogoBarContainer {
   overflow: hidden;
   height: 60px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  z-index: 100;
 }
 
 .PageContent {
